# arm_display

./: .env  .gitignore  google-key.json  google-key1.json  google_service_acc.json  package-lock.json  package.json  test.xlsx  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1696906581595-867e3450816c5.mjs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  credential.rs  fetch_data.rs  main.rs  struct_data.rs  tauri_command.rs  tauri_state.rs
src-tauri/src/credential/: auth.rs  http_client.rs  sheets.rs
src-tauri/src/fetch_data/: make_bar_graph.rs  make_bullet_graph.rs  make_combo_graph.rs  make_float_hori_bar.rs  make_gauge_graph.rs  make_hori_bar_graph.rs  parse_spreadsheet_data.rs
src-tauri/src/tauri_command/: fetch_google_spreadsheet.rs
src/lib/: Chart_BarChart origin.svelte  Chart_BarChart.svelte  Chart_BulletChart.svelte  Chart_ComboChart.svelte  Chart_FlootHoriBarChart.svelte  Chart_GaugeChart.svelte  Chart_HoriBarChart.svelte  Chart_bar.svelte  Chart_bar1.svelte  Chart_combo.svelte  Chart_doughnut.svelte  Chart_line.svelte  Greet.svelte  Screen1.svelte  Screen2.svelte  Screen3.svelte  Screen4.svelte  Screen5.svelte  Screen6.svelte  Scroll_news.svelte  config.svelte  data_bar.js  data_bar1.js  data_bar2.js  data_bar3.js  data_bar4.js  data_bar5.js  data_bar6.js  data_combo.js  data_line.js  options_bar1.js  options_bar2.js  options_bar3.js  options_bar4.js  options_bar5.js  options_bar6.js
